# feq-parse

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  feq-parse.md  feq.code-workspace  fpm.toml  fprettify.config  index.html  mkdocs.yml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml  fprettify-lint.yml  linux-amdflang-cmake.yaml  linux-ci.yml  linux-cmake.yml  linux-fpm.yml  linux-gnu-cmake.yml  linux-gnu-fpm.yml  linux-intel-fpm.yml  linux-nvfortran-cmake.yaml  release-deb.yml  windows-ci.yml  windows-cmake.yml  windows-fpm.yml  windows-gnu-fpm.yml
build-with-feqparse/: index.html
docs/: CNAME  build-with-feqparse.md  index.md  parsing-equations.md
docs/ford/: index.html  search.html
docs/ford/interface/: addfunction.html  equationparser.html  f32.html  f64.html  randomize_r32.html  randomize_r64.html  tuple.html
docs/ford/lists/: files.html  modules.html  types.html
docs/ford/module/: feqparse.html  feqparse_floatstacks.html  feqparse_functions.html  feqparse_tokenstack.html
docs/ford/proc/: acos32.html  acos64.html  addfunction32.html  addfunction64.html  asin32.html  asin64.html  atan32.html  atan64.html  character_array_assign_function.html  character_assign_function.html  character_eq_function.html  character_neq_function.html  cleanequation.html  construct_r1fp32stack.html  construct_r1fp64stack.html  construct_r2fp32stack.html  construct_r2fp64stack.html  construct_r3fp32stack.html  construct_r3fp64stack.html  construct_r4fp64stack.html  construct_sfp32stack.html  construct_sfp64stack.html  construct_tokenstack.html  converttopostfix.html  copy.html  cos32.html  cos64.html  cosh32.html  evaluate_r1fp32.html  evaluate_r2fp32.html  evaluate_r2fp64.html  evaluate_r3fp32.html  evaluate_r3fp64.html  evaluate_r4fp32.html  evaluate_r4fp64.html  evaluate_sfp32.html  evaluate_sfp64.html  exp32.html  exp64.html  finalize_equationparser.html  (+69 more)
docs/ford/sourcefile/: feqparse.f90.html  feqparse_floatstacks.f90.html  feqparse_tokenstack.f90.html
docs/ford/tipuesearch/: tipuesearch_content.js
docs/ford/type/: equationparser.html  feqparse_function.html  indepvar.html  r1fp64stack.html  r2fp64stack.html  r3fp64stack.html  r4fp32stack.html  r4fp64stack.html  sfp32stack.html  sfp64stack.html  token.html  tokenstack.html  tuple.html
example/: array_with_array_eval.f90  array_with_array_eval.i90  array_with_scalar_eval.f90  array_with_scalar_eval.i90  gaussian_scalar_multivar.f90  gaussian_scalar_multivar.i90  scalar_function_product.f90  scalar_function_product.i90  scalar_with_scalar_eval.f90  scalar_with_scalar_eval.i90
ford/: index.html
ford/interface/: addfunction.html  equationparser.html  f32.html  randomize_r64.html
ford/lists/: procedures.html  types.html
ford/module/: feqparse.html  feqparse_floatstacks.html  feqparse_functions.html  feqparse_tokenstack.html
ford/proc/: abs32.html  abs64.html  acos64.html  asin32.html  atan32.html  atan64.html  character_array_assign_function.html  character_eq_function.html  character_neq_function.html  cleanequation.html  construct_equationparser.html  construct_r1fp64stack.html  construct_r2fp32stack.html  construct_r2fp64stack.html  construct_r3fp32stack.html  construct_r3fp64stack.html  construct_r4fp32stack.html  construct_r4fp64stack.html  construct_sfp32stack.html  copy.html  cosh64.html  evaluate_r1fp64.html  evaluate_r2fp32.html  evaluate_r2fp64.html  evaluate_r3fp32.html  evaluate_r4fp32.html  evaluate_sfp32.html  evaluate_sfp64.html  exp32.html  finalize_r2fp64stack.html  finalize_r3fp32stack.html  finalize_r4fp32stack.html  finalize_sfp32stack.html  finalize_sfp64stack.html  finalize_tokenstack.html  function_finalize.html  function_neq_character.html  invoke64.html  isempty_tokenstack.html  isfunction.html  (+28 more)
ford/sourcefile/: feqparse.f90.html  feqparse_floatstacks.f90.html  feqparse_functions.f90.html  feqparse_tokenstack.f90.html
ford/tipuesearch/: tipuesearch_content.js
ford/type/: equationparser.html  feqparse_floatstack.html  feqparse_function.html  r1fp32stack.html  r2fp32stack.html  r2fp64stack.html  r3fp32stack.html  r3fp64stack.html  r4fp32stack.html  r4fp64stack.html  sfp32stack.html  sfp64stack.html  token.html  tokenstack.html
parsing-equations/: index.html
src/: CMakeLists.txt  EquationParser_Class.F03  FEQParse.F03  FEQParse.F90  FEQParse.f90  FEQParse.i90  FEQParse_FloatStacks.F90  FEQParse_FloatStacks.f90  FEQParse_Functions.F90  FEQParse_Functions.f90  FEQParse_TokenStack.F90  FEQParse_TokenStack.f90
test/: CMakeLists.txt  abs_r1fp32.f90  abs_r1fp32.i90  abs_r1fp64.f90  abs_r1fp64.i90  abs_r2fp32.f90  abs_r2fp32.i90  abs_r2fp64.f90  abs_r2fp64.i90  abs_r3fp32.f90  abs_r3fp32.i90  abs_r3fp64.f90  abs_r3fp64.i90  abs_r4fp32.f90  abs_r4fp32.i90  abs_r4fp64.f90  abs_r4fp64.i90  abs_sfp32.f90  abs_sfp32.i90  abs_sfp64.f90  abs_sfp64.i90  acos_r1fp32.f90  acos_r1fp32.i90  acos_r1fp64.f90  acos_r1fp64.i90  acos_r2fp32.f90  acos_r2fp32.i90  acos_r2fp64.f90  acos_r2fp64.i90  acos_r3fp32.f90  acos_r3fp32.i90  acos_r3fp64.f90  acos_r3fp64.i90  acos_r4fp32.f90  acos_r4fp32.i90  acos_r4fp64.f90  acos_r4fp64.i90  acos_sfp32.f90  acos_sfp32.i90  acos_sfp64.f90  (+311 more)
test/custom/: test.f90
test/fpm/: test.f90  test.i90
