set(CMAKE_VERBOSE_MAKEFILE ON)
file(GLOB FEQPARSE_SRC     "${CMAKE_CURRENT_SOURCE_DIR}/*.F*")

set(FEQPARSE_LIB "feqparse")
set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include)

ADD_LIBRARY(${FEQPARSE_LIB} STATIC ${FEQPARSE_SRC})

install(TARGETS ${FEQPARSE_LIB} 
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib)

set_target_properties(${FEQPARSE_LIB} PROPERTIES LINKER_LANGUAGE Fortran)

install(DIRECTORY ${CMAKE_Fortran_MODULE_DIRECTORY}/ DESTINATION include)


